Apache part initial commit.

--- a/apache/tasks/setup.yml
+++ b/apache/tasks/setup.yml
@@ -1,22 +1,45 @@
 ---
 # File: setup.yml
 #         
-# Description: Miscelaneous startup tasks when provisionning a new server.
-#                 
-# Dependencies-internal (type:filename):
-# - vars: vars:main.yml
-#     
-# Dependencies-external (module:type:filename): 
+# Description: Install and configure an Apache server
 #
-# OS familly: Debian
+# Parameters:
+#
+# Dependencies ([part:]type:filename):
+# - vars:main.yml
+# - handlers:handlers.yml
+#
+# OS: Debian
 
-- name: Apache | Install apache related packages
-  apt: pkg:$item state=installed
-  with_items:
-  - apache2
+- name: Apache | Install Apache-$apache_flavor
+  apt: pkg=apache2-mpm-$apache_flavor state=installed
 
 # Install the default templates
 - name: Apache | Configure envvars
-  template: src=templates/apache_envvars.j2 dest=/etc/apache2/envvars owner=root group=root mode=0644
-  notify:
+  template: 
+    src=$repository_basedir/apache/templates/envvars.j2 
+    dest=/etc/apache2/envvars 
+    owner=root group=root mode=0644
+
+# Configure a default virtual host
+- name: Apache | Create document root for default virtual host at $apache_root/default
+  file: 
+    path=$apache_root/default 
+    state=directory recurse=yes 
+    owner=root group=root mode=0755
+
+- name: Apache | Push default index file to the docroot
+  template: 
+    src=$repository_basedir/apache/templates/default_index.html.j2 
+    dest=$apache_root/default/index.html
+
+- name: Apache | Push default virtualhost configuration template
+  template: 
+    src=$repository_basedir/apache/templates/default_virtualhost.j2 
+    dest=/etc/apache2/sites-available/default
+  notify: 
   - apache-restart
+
+# Insure service is running.
+- name: Apache | Insure deamon is running correctly
+  service: name=apache2 state=started
