--- a/hg/vars/main.yml
+++ b/hg/vars/main.yml
@@ -9,5 +9,5 @@
 #- grp: default
 #  prefix: domain
 #  username: some.user
-#  password: MichaelIsNotDead
+#  password: MJacksonIsNotDead
 #  schemes: http
