--- a/apache/tasks/setup.yml
+++ b/apache/tasks/setup.yml
@@ -1,6 +1,6 @@
 ---
 # File: setup.yml
-#         
+#
 # Description: Install and configure an Apache server
 #
 # Parameters:
@@ -9,35 +9,35 @@
 # - vars:main.yml
 # - handlers:handlers.yml
 #
-# OS: Debian
+# OS familly: Debian
 
 - name: Apache | Install Apache-$apache_flavor
   apt: pkg=apache2-mpm-$apache_flavor state=installed
 
 # Install the default templates
 - name: Apache | Configure envvars
-  template: 
-    src=$repository_basedir/apache/templates/envvars.j2 
-    dest=/etc/apache2/envvars 
+  template:
+    src=$repository_basedir/apache/templates/envvars.j2
+    dest=/etc/apache2/envvars
     owner=root group=root mode=0644
 
 # Configure a default virtual host
 - name: Apache | Create document root for default virtual host at $apache_root/default
-  file: 
-    path=$apache_root/default 
-    state=directory recurse=yes 
+  file:
+    path=$apache_root/default
+    state=directory recurse=yes
     owner=root group=root mode=0755
 
 - name: Apache | Push default index file to the docroot
-  template: 
-    src=$repository_basedir/apache/templates/default_index.html.j2 
+  template:
+    src=$repository_basedir/apache/templates/default_index.html.j2
     dest=$apache_root/default/index.html
 
 - name: Apache | Push default virtualhost configuration template
-  template: 
-    src=$repository_basedir/apache/templates/default_virtualhost.j2 
+  template:
+    src=$repository_basedir/apache/templates/default_virtualhost.j2
     dest=/etc/apache2/sites-available/default
-  notify: 
+  notify:
   - apache-restart
 
 # Insure service is running.
