--- a/mysql/tasks/setup.yml
+++ b/mysql/tasks/setup.yml
@@ -24,16 +24,16 @@
   template:
     src=$repository_basedir/mysql/templates/mysql_seed.j2
     dest=/root/mysql.seed
-  when_string: ${mysqld_exists.stdout} == 'Not Found'
+  when_string: ${mysqld_exists.stdout} != 'Found'
 
 - name: MySQL | Preseed mysql file
   command: /usr/bin/debconf-set-selections /root/mysql.seed
-  when_string: ${mysqld_exists.stdout} == 'Not Found'
+  when_string: ${mysqld_exists.stdout} != 'Found'
 
 # 3) Install
 - name: MySQL | Install server
   apt: pkg=mysql-server state=installed force=yes
-  when_string: ${mysqld_exists.stdout} == 'Not Found'
+  when_string: ${mysqld_exists.stdout} != 'Found'
 
 - name: MySQL | Ensure MySQL daemon is running
   service: name=mysql state=started
@@ -41,7 +41,7 @@
 # 4) Cleanup
 - name: MySQL | Delete mysql.seed file
   command: /bin/rm /root/mysql.seed
-  when_string: ${mysqld_exists.stdout} == 'Not Found'
+  when_string: ${mysqld_exists.stdout} != 'Found'
 
 
 # Push configuration files
