--- a/mysql/tasks/setup.yml
+++ b/mysql/tasks/setup.yml
@@ -16,7 +16,8 @@
 # Install server using a preseed file to set the root password
 # 1) Check is MySQL Server is already installed. If so, do not set preseed file
 - name: MySQL | Check for previous installation
-  shell: "[ -f /usr/sbin/mysqld ] && echo 'Found' || echo 'Not found'"
+  shell: "[ -f /usr/sbin/mysqld ]"
+  ignore_errors: True
   register: mysqld_exists
 
 # 2) Preseed install options
@@ -24,16 +25,16 @@
   template:
     src=$repository_basedir/mysql/templates/mysql_seed.j2
     dest=/root/mysql.seed
-  when_string: ${mysqld_exists.stdout} != 'Found'
+  when_failed: $mysqld_exists
 
 - name: MySQL | Preseed mysql file
   command: /usr/bin/debconf-set-selections /root/mysql.seed
-  when_string: ${mysqld_exists.stdout} != 'Found'
+  when_failed: $mysqld_exists
 
 # 3) Install
 - name: MySQL | Install server
   apt: pkg=mysql-server state=installed force=yes
-  when_string: ${mysqld_exists.stdout} != 'Found'
+  when_failed: $mysqld_exists
 
 - name: MySQL | Ensure MySQL daemon is running
   service: name=mysql state=started
@@ -41,7 +42,7 @@
 # 4) Cleanup
 - name: MySQL | Delete mysql.seed file
   command: /bin/rm /root/mysql.seed
-  when_string: ${mysqld_exists.stdout} != 'Found'
+  when_failed: $mysqld_exists
 
 
 # Push configuration files
