Handle the different PHP config directories for Ubuntu 12.04 and 12.10.

--- a/php/tasks/phpdev.yml
+++ b/php/tasks/phpdev.yml
@@ -12,7 +12,7 @@
 #
 # OS familly: Debian
 
-- name: PHP | PHPDev | Install PHP development tools
+- name: PHP | PHPDev | Install PHP development packages
   apt: pkg=$item state=installed
   with_items:
     - php-pear
