--- a/php/tasks/apache.yml
+++ b/php/tasks/apache.yml
@@ -9,7 +9,7 @@
 # - apache:tasks:setup.yml
 # - vars:main.yml (not necessary if you don't override defaults)
 #
-# OS familly: Debian
+# OS familly: Ubuntu
 
 - name: "PHP | Apache | Install the distribution's PHP & Apache's mod_php base packages"
   apt: pkg=$item state=installed
