--- a/apache/tasks/vhost_add.yml
+++ b/apache/tasks/vhost_add.yml
@@ -1,6 +1,7 @@
 ---
 # File: vhost_add.yml     
-# 
+# Part: Apache
+#
 # Description: Create a new virtual host
 #   
 # Parameters:
@@ -12,20 +13,18 @@
 # - handlers:handlers.yml
 # - vars/main.yml
 #
-# OS familly: Debian
+# OS familly: Ubuntu
 
 - name: Apache | Virtualhost add | Create document root at $apache_root/$docroot
   file: 
     path=$apache_root/$docroot 
     state=directory 
-    owner=root group=root mode=0644
   when_boolean: $create_docroot
 
 - name: Apache | Virtualhost add | Push default index file to docroot
   template: 
     src=$repository_basedir/apache/templates/default_index.html.j2 
     dest=$apache_root/$docroot/index.html 
-    owner=root group=root mode=0644
   when_boolean: $create_docroot
   notify:
   - apache-reload
