--- a/mysql/tasks/php.yml
+++ b/mysql/tasks/php.yml
@@ -1,13 +1,13 @@
 ---
-# Part: MySQL
 # File: php.yml
+# Part: MySQL
 #
 # Description: Install PHP5 - MySQL bindings
 #
 # Dependencies ([part:]type:filename):
 # - php:tasks:setup.yml
 #
-# OS familly: Debian
+# OS familly: Ubuntu
 
 - name: MySQL - install PHP5 bindings
   apt: pkg=$item state=installed
