--- a/bootstrap/tasks/setup.yml
+++ b/bootstrap/tasks/setup.yml
@@ -18,10 +18,12 @@
   command: apt-get upgrade -y
   when_boolean: $bootstrap_upgrade
 
-- name: Bootstrap | install misc utils
+- name: Bootstrap | Install misc utils
   apt: pkg=$item state=present
   with_items:
     - htop
     - curl
     - tmux
+    - unzip
     - vim
+
