--- a/apache/tasks/setup.yml
+++ b/apache/tasks/setup.yml
@@ -41,6 +41,9 @@
   notify:
   - apache-restart
 
+- name: Apache | Remove default index file from default docroot
+  file: path=/var/www/index.html state=absent
+
 # Insure service is running.
 - name: Apache | Insure deamon is running correctly
   service: name=apache2 state=started
