--- a/bootstrap/tasks/setup.yml
+++ b/bootstrap/tasks/setup.yml
@@ -9,7 +9,7 @@
 #
 # Dependencies ([part:]type:filename):
 #
-# OS familly: Ubuntu
+# OS familly: Ubuntu >= 12.04
 
 - name: Bootstrap | Update apt caches.
   command: apt-get update
