Graphite related changes.

--- a/bootstrap/tasks/setup.yml
+++ b/bootstrap/tasks/setup.yml
@@ -25,4 +25,6 @@
     - curl
     - tmux
     - unzip
+    - python-software-properties # Dependencies for the apt module
+    - software-properties-common
 
