--- a/graphite/vars/main.yml
+++ b/graphite/vars/main.yml
@@ -1,25 +1,18 @@
 
-# External variables
-# ------------------
+# Graphite runner (should be defined in the playbook)
+# graphite_user: someuser
 
-# Graphite runner
-# graphite_user:
-
-# Storage schemas
+# Add custom storage schemas
 # cf. http://graphite.readthedocs.org/en/0.9.10/config-carbon.html#storage-schemas-conf
-graphite_storage:
-- title: 'cpu_load'
-  #priority: '100'
-  pattern: '^servers\.'
-  retentions: '10s:2h'
-
-# graphite_storage_default: '60s:1d'
-
-# Defaults
-# ------------------
+#graphite_storage:
+#- title: 'cpu_load'
+#  priority: '100'
+#  pattern: '^servers\.'
+#  retentions: '60s:1d'
 
 # VirtualEnv Path (If this changes, then all settings templates should be rewritten)
 graphite_venv_path: /opt/graphite
-
-# Template
+#
+# graphite_storage_default: '60s:1d'
 # graphite_webapp_tz: Europe/Paris
+# graphite_uwsgi_port: 8085
