--- a/php/tasks/setup.yml
+++ b/php/tasks/setup.yml
@@ -30,15 +30,15 @@
 - name: "PHP | Set APC config (Ubuntu >= 12.10)"
   template:
     src=$repository_basedir/php/templates/apc.ini.j2
-    dest=/etc/php5/mods-available/apc.ini
+    dest="/etc/php5/mods-available/apc.ini"
     owner=root group=root mode=0644
-  when_string: $ansible_lsb.release == "12.10"
+  when_string: $ansible_lsb.release != "12.04"
 
 # APC (with php extensions directory for < 12.10)
-- name: "PHP | Set APC config (Ubuntu <= 12.04)"
+- name: "PHP | Set APC config (Ubuntu == 12.04)"
   template:
     src=$repository_basedir/php/templates/apc.ini.j2
     dest=/etc/php5/conf.d/apc.ini
     owner=root group=root mode=0644
-  when_string: $ansible_lsb.release != "12.10"
+  when_string: $ansible_lsb.release == "12.04"
 
