--- a/mongodb/tasks/setup.yml
+++ b/mongodb/tasks/setup.yml
@@ -20,6 +20,17 @@
     creates=/etc/apt/sources.list.d/10gen.list
 
 - name: MongoDB | Install latest MongoDB release 
-  apt: pkg=mongodb-10gen state=present force=yes update_cache=yes
+  apt: pkg=mongodb-10gen state=present update_cache=yes
 
+- name: MongoDB | Push default configuration template
+  template:
+    src=$repository_basedir/mongodb/templates/mongodb.conf.j2
+    dest=/etc/mongodb.conf
+    owner=root group=root mode=0644
+  notify:
+  - mongodb-restart
+
+# Insure service is running.
+- name: MongoDB | Insure deamon is running correctly
+  service: name=mongodb state=started
 
