separate pecl package install

--- a/php/tasks/phpdev.yml
+++ b/php/tasks/phpdev.yml
@@ -17,7 +17,6 @@
   with_items:
     - php-pear
 
-
 # PEAR Packages
 - name: PHP | PHPDev | Update pear packages
   command: pear upgrade
@@ -32,26 +31,15 @@
 
 
 # PECL Packages
-- name: PHP | PHPDev | Test for previous XDebug install
-  shell:  php -i | grep -i 'xdebug'
-  register: php_pecl_xdebug_exists
-  ignore_errors: True
-
-- name: PHP | PHPDev | XDebug install
-  command: pecl install xdebug
-  when_failed: $php_pecl_xdebug_exists
-
 - name: PHP | PHPDev | Fetch PHP extension dir
   shell: "php -i | grep -i '^extension_dir' | awk '{print $3}'"
   register: php_extension_dir
 
-- name: PHP | PHPDev | Set xDebug config
-  template:
-    src=$repository_basedir/php/templates/xdebug.ini.j2
-    dest=/etc/php5/conf.d/xdebug.ini
-    owner=root group=root mode=0644
+- include: $repository_basedir/php/tasks/pecl.yml package=xdebug
 
 
 # Other useful tools
 - name: PHP | PHPDev | Install composer
-  shell: curl -sS https://getcomposer.org/installer | /usr/bin/php && /bin/mv -f /home/vagrant/composer.phar /usr/local/bin/composer creates=/usr/local/bin/composer
+  shell: 
+    curl -sS https://getcomposer.org/installer | /usr/bin/php && /bin/mv -f /home/vagrant/composer.phar /usr/local/bin/composer 
+    creates=/usr/local/bin/composer
