--- a/php/tasks/pecl.yml
+++ b/php/tasks/pecl.yml
@@ -3,32 +3,47 @@
 # File: pecl.yml
 #
 # Description: Manage Pecl package installations
+#   Supposes the config template file php/templates/${package}.ini.j2 exists
 #
 # Parameters:
-#   $package
+# - $package
 #
 # Dependencies ([part:]type:filename):
 # - tasks:setup.yml
 #
 # OS familly: Ubuntu
-#- name: PHP | PECL | Install PHP development packages
-#  apt: pkg=$item state=installed
-#  with_items:
-#    - make
-#    - php5-dev
-#    - libpcre3-dev
+- name: PHP | PECL | Insure PHP development packages are installed
+  apt: pkg=$item state=installed
+  with_items:
+    - php5-dev
 
 - name: PHP | PECL | Test for previous "$package" install
   shell:  pecl list | grep -i '$package'
-  register: php_${package}_exists
-  ignore_errors: True
+  register: php_package_exists
+  ignore_errors: yes
 
-#- name: PHP | PECL | Install $package
-#  command: pecl install $package
-#  when_failed: php_${package}_exists
+- name: PHP | PECL | Install $package
+  command: pecl install $package
+  when_failed: ${php_package_exists}
 
-#- name: PHP | PECL | Set $package config
-#  template:
-#    src=$repository_basedir/php/templates/${package}.ini.j2
-#    dest=/etc/php5/conf.d/xdebug.ini
-#    owner=root group=root mode=0644
+- name: PHP | PECL | Set $package config
+  template:
+    src=$repository_basedir/php/templates/${package}.ini.j2
+    dest=/etc/php5/conf.d/${package}.ini
+    owner=root group=root mode=0644
+  when_string: $ansible_lsb.release == "12.04"
+
+- name: PHP | PECL | Set $package config (Ubuntu > 12.04)
+  template:
+    src=$repository_basedir/php/templates/${package}.ini.j2
+    dest=/etc/php5/mods-available/${package}.ini
+    owner=root group=root mode=0644
+  when_string: $ansible_lsb.release != "12.04"
+
+- name: PHP | PECL | Set symbolic link to $package config (Ubuntu > 12.04)
+  file:
+    src=/etc/php5/mods-available/${package}.ini
+    dest=/etc/php5/conf.d/20-${package}.ini
+    owner=root group=root state=link
+  when_string: $ansible_lsb.release != "12.04"
+
