--- a/nginx/tasks/setup.yml
+++ b/nginx/tasks/setup.yml
@@ -21,19 +21,19 @@
     update_cache=yes
     force=yes
 
-#- name: Nginx | Push main config file
-#  template:
-#    src=$repository_basedir/nginx/templates/nginx.conf.j2
-#    dest=/etc/nginx/nginx.conf
-#    owner=root group=root mode=0644
+- name: Nginx | Push main config file
+  template:
+    src=$repository_basedir/nginx/templates/nginx.conf.j2
+    dest=/etc/nginx/nginx.conf
+    owner=root group=root mode=0644
 
-#- name: Nginx | Disable default virtual host
-#  file:
-#    path=/etc/nginx/sites-enabled/default
-#    state=absent
+- name: Nginx | Disable default virtual host
+  file:
+    path=/etc/nginx/sites-enabled/default
+    state=absent
 
-#- name: Nginx | Insure Nginx is running
-#  service:
-#    name=nginx
-#    state=started
+- name: Nginx | Insure Nginx is running
+  service:
+    name=nginx
+    state=started
 
