--- a/nginx/example-playbook.yml
+++ b/nginx/example-playbook.yml
@@ -5,10 +5,11 @@
 
   vars:
     repository_basedir: ../../ansible-repository
+    nginx_flavour: full
 
   tasks:
     - include: $repository_basedir/nginx/tasks/setup.yml
-    - include: $repository_basedir/nginx/tasks/vhost_add.yml create_root=true name=test.webdev.vt root=/vagrant/www 
+    - include: $repository_basedir/nginx/tasks/vhost_add.yml create_root=true name=domain.com root=/vagrant/www type=html
 
   handlers:
     - include: $repository_basedir/nginx/handlers/handlers.yml
