--- a/nginx/tasks/setup.yml
+++ b/nginx/tasks/setup.yml
@@ -28,12 +28,22 @@
     dest=/etc/nginx/nginx.conf
     owner=root group=root mode=0644
 
+- name: Nginx | Push extra config files
+  template:
+    src=$repository_basedir/nginx/files/$item
+    dest=/etc/nginx/$item
+    owner=root group=root mode=0644
+  with_items:
+  - blacklist.conf
+  - nginx_status_server.conf
+  - nginx_fpm_status_server.conf
+
 - name: Nginx | Disable default server block
   file:
     path=/etc/nginx/sites-enabled/default
     state=absent
 
-- name: Nginx | Insure Nginx is running
+- name: Nginx | Ensure Nginx is running
   service:
     name=nginx
     state=started
