--- a/nginx/vars/main.yml
+++ b/nginx/vars/main.yml
@@ -1,8 +1,10 @@
-# Nginx flavour : This should be playbook defined
-# Allowed values: full / light
-nginx_flavour: full
 
-# nginx_worker_processes: 4
-# nginx_user: www-data
-
+nginx_worker_processes: 4
+nginx_user: www-data
+nginx_fcgi_fpm: false
 nginx_status_ranges: ["127.0.0.1", "192.168.1.0/24"]
+
+nginx_fastcgi_upstreams:
+- name: www
+  keepalive: 5
+  servers: ["unix:/var/run/php5-fpm-www.sock"]
